--- a/xinji-frontend/package.json
+++ b/xinji-frontend/package.json
@@ -10,28 +10,29 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "element-plus": "^2.4.4",
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.6.2",
-    "echarts": "^5.4.3",
-    "vue-echarts": "^6.6.5",
-    "dayjs": "^1.11.10",
     "@vueuse/core": "^10.7.0",
-    "nprogress": "^0.2.0"
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
+    "echarts-wordcloud": "^2.1.0",
+    "element-plus": "^2.4.4",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.0",
+    "vue-echarts": "^6.6.5",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vue-tsc": "^1.8.25",
-    "sass": "^1.69.5",
     "@types/node": "^20.10.5",
     "@types/nprogress": "^0.2.3",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite": "^5.0.10",
+    "vite-plugin-pwa": "^0.17.4",
+    "vue-tsc": "^1.8.25"
   }
 }
